# telepathy-tank

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  telepathy-tank.pro
.github/workflows/: build.yml
rpm/: telepathy-tank.spec
src/: CMakeLists.txt  connection.cpp  connection.hpp  dbus-service.in  debug.cpp  debug.hpp  main.cpp  messageschannel.cpp  messageschannel.hpp  protocol.cpp  protocol.hpp  requestdetails.cpp  requestdetails.hpp  src.pro  tank.manager
